create coming-soon page

--- a/html/cost-calculator.html
+++ b/html/cost-calculator.html
@@ -401,8 +401,11 @@
                                                                         stroke-linejoin="round" />
                                                                 </svg>
                                                                 <div>
-                                                                    <p class="font-m fw-500 text-dark fs-28 mt-3">
-                                                                        A free zone  Liability Company (LLC)</p>
+                                                                    <p class="font-m fw-500 text-dark fs-28 mt-3">A free
+                                                                        zone
+                                                                        Limited Liability
+                                                                        Company
+                                                                        (LLC)</p>
                                                                     <p class="text-dark font-r">An
                                                                         independent
                                                                         legal entity with a mixture of both
@@ -1230,7 +1233,7 @@
 
                 </div>
             </div>
-             <div class="thank-you-message pt-5">
+            <!-- <div class="thank-you-message pt-5">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-6">
@@ -1306,7 +1309,7 @@
                         </div>
                     </div>
                 </div>
-            </div> 
+            </div> -->
         </section>
     </main>
 
