add dropdown navigation

--- a/app/index.html
+++ b/app/index.html
@@ -125,17 +125,63 @@
                             <div class="collapse navbar-collapse text-start" id="navbarSupportedContent">
                                 <ul class="navbar-nav mb-2 mb-lg-0 mx-auto text-center">
                                     <li>
-                                        <a href="about.html">
+                                        <a href="about.html" class="text-white">
                                             About
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="about.html">
-                                            Explore
-                                        </a>
+                                        <div class="dropdown nav-link  d-flex flex-column">
+                                            <button
+                                                class="btn btn-secondary dropdown-toggle p-0 bg-transparent border-0 text-white"
+                                                type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                                Explore
+                                            </button>
+                                            <ul class="dropdown-menu text-white text-center text-lg-start">
+                                                <li class="dropend">
+                                                    <a class="nav-link dropdown-toggle text-white ms-2" href="#"
+                                                        role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                                        Industry Clusters
+                                                    </a>
+                                                    <ul class="dropdown-menu">
+                                                        <li><a class="dropdown-item text-white"
+                                                                href="#">Life Sciences</a></li>
+                                                        <li><a class="dropdown-item text-white"
+                                                                href="#">AI</a></li>
+                                                                <li><a class="dropdown-item text-white"
+                                                                    href="#">Energy</a></li>
+                                                                    <li><a class="dropdown-item text-white"
+                                                                        href="#">Smart Mobility</a></li>
+                                                                        <li><a class="dropdown-item text-white"
+                                                                            href="#">Agri-Tech</a></li>
+                                                                            <li><a class="dropdown-item text-white"
+                                                                                href="#">Space Tech</a></li>
+            
+
+                                                    </ul>
+                                                </li>
+                                                <li class="dropend">
+                                                    <a class="nav-link dropdown-toggle text-white ms-2" href="#"
+                                                        role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                                        News
+                                                    </a>
+                                                    <ul class="dropdown-menu">
+                                                        <li><a class="dropdown-item text-white"
+                                                                href="live.html">Blog Post</a></li>
+                                                    </ul>
+                                                </li>
+                                                <li>
+                                                    <a class=" text-white ms-2" href="#"
+                                                        role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                                        Events
+                                                    </a>
+                                           
+                                                </li>
+
+                                            </ul>
+                                        </div>
                                     </li>
                                     <li>
-                                        <a href="about.html">
+                                        <a href="about.html" class="text-white">
                                             Contact us
                                         </a>
                                     </li>
