--- a/app/index.html
+++ b/app/index.html
@@ -129,8 +129,7 @@
                                             About
                                         </a>
                                     </li>
-                                    <li>
-                                        <div class="dropdown nav-link  d-flex flex-column">
+                                    <li class="dropdown nav-link  d-flex flex-column">
                                             <button
                                                 class="btn btn-secondary dropdown-toggle p-0 bg-transparent border-0 text-white"
                                                 type="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -178,7 +177,6 @@
                                                 </li>
 
                                             </ul>
-                                        </div>
                                     </li>
                                     <li>
                                         <a href="about.html" class="text-white">
