--- a/html/componentdemo.html
+++ b/html/componentdemo.html
@@ -565,80 +565,14 @@ h2.flex-title {
            
 
           <!-- boostrap grid -->
-           <style>
-            /* Section styling */
-.grid-content-section {
-    background-color: #f8f9fa; /* Optional: Background color for the section */
-}
-
-/* Image styling */
-.grid-img-responsive {
-    width: 100%;
-    height: auto;
-    border-radius: 8px;
-    object-fit: cover;
-}
-
-/* Title styling */
-.grid-title {
-    font-size: 2rem;
-    font-weight: bold;
-    margin-bottom: 1rem;
-}
-
-/* Paragraph styling */
-.grid-description {
-    font-family: 'DIN Pro';
-    font-size: 1.1rem;
-    font-weight: 500;
-    line-height: 1.7rem;
-    text-align: left;
-    color: #333;
-}
-
-/* Button styling */
-
-
-.grid-btn  {
-    color: #00999A;
-    background-color: transparent;
-    border: 1px solid #00999A;
-    padding: 10px 20px;
-    text-decoration: none;
-    border-radius: 5px;
-    margin-top: 1.5rem;
-    display: inline-block;
-}
-
-.grid-btn:hover  {
-    color: white;
-    background-color: #00999A;
-    border: 1px solid #00999A;
-    padding: 10px 20px;
-    text-decoration: none;
-    border-radius: 5px;
-    margin-top: 1.5rem;
-}
-
-
-/* Responsive Styling */
-@media (max-width: 992px) {
-    .grid-text {
-        margin-top: 20px; /* Adds spacing between image and text on smaller screens */
-    }
-    .row.left {
-    flex-direction: column-reverse;
-}
-}
-
-           </style>
-<h1>Boostrap Grid Layout</h1>
+     
+<!-- <h1>Boostrap Grid Layout</h1> -->
 <section class="grid-content-section py-5">
     <div class="container">
         <div class="row">
             <!-- Image/Video Column -->
             <div class="col-lg-6 col-md-12 mb-4 mb-lg-0 grid-image">
-                <img src="assets/images/dynamic/SectionImage.png" alt="Life Sciences" class="img-fluid grid-img-responsive">
+                <img src="/images/default-source/default-album/sectionimage.png" alt="Life Sciences" class="img-fluid grid-img-responsive">
                 <!-- Or replace with a video tag if needed -->
                 <!-- <video class="img-fluid grid-img-responsive" controls>
                     <source src="path/to/video.mp4" type="video/mp4">
@@ -681,7 +615,7 @@ h2.flex-title {
 
                         <!-- Image/Video Column -->
                         <div class="col-lg-6 col-md-12 mb-4 mb-lg-0 grid-image">
-                            <img src="assets/images/dynamic/SectionImage.png" alt="Life Sciences" class="img-fluid grid-img-responsive">
+                            <img src="/images/default-source/default-album/sectionimage.png" alt="Life Sciences" class="img-fluid grid-img-responsive">
                             <!-- Or replace with a video tag if needed -->
                             <!-- <video class="img-fluid grid-img-responsive" controls>
                                 <source src="path/to/video.mp4" type="video/mp4">
