--- a/html/componentdemo.html
+++ b/html/componentdemo.html
@@ -763,8 +763,86 @@ h2.flex-title {
     </div>
 </section>
 
-        <!-- normal grid end-->
+<!-- new bootstrap grid  -->
+        <section class="grid-content-section py-5">
+            <div class="container">
+                <div class="row align-items-center">
+                    <!-- Image Column -->
+                    <div class="col-lg-6 col-md-12 mb-4 mb-lg-0">
+                        <img src="/images/default-source/default-album/ind-cluster" alt="Life Sciences" class="img-fluid new-image-grid">
+                    </div>
         
+                    <!-- Text Content Column -->
+                    <div class="col-lg-6 col-md-12 new-text-grid">
+                        <h2>Life Sciences</h2>
+                        <h3>H3 Content</h3>
+                        <p>
+                            The Masdar City Free Zone Life Sciences Cluster in Abu Dhabi is a rapidly expanding hub for life sciences and biotechnology, supported by the region’s most advanced R&D institutions, leading CROs, and government-backed initiatives from the Department of Health Abu Dhabi (DoH) and the Abu Dhabi Investment Office. This cluster provides unparalleled opportunities for collaboration, innovation, and growth within a strategically located free zone in Abu Dhabi, making it an ideal choice for businesses involved in life sciences and BioTech in Abu Dhabi, and beyond.
+                        </p>
+                        <a href="#">Learn More</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="grid-content-section py-5">
+            <div class="container">
+                <div class="row align-items-center left">
+        
+                    <!-- Text Content Column -->
+                    <div class="col-lg-6 col-md-12 new-text-grid">
+                        <h2>Life Sciences</h2>
+                        <h3>H3 Content</h3>
+                        <p>
+                            The Masdar City Free Zone Life Sciences Cluster in Abu Dhabi is a rapidly expanding hub for life sciences and biotechnology, supported by the region’s most advanced R&D institutions, leading CROs, and government-backed initiatives from the Department of Health Abu Dhabi (DoH) and the Abu Dhabi Investment Office. This cluster provides unparalleled opportunities for collaboration, innovation, and growth within a strategically located free zone in Abu Dhabi, making it an ideal choice for businesses involved in life sciences and BioTech in Abu Dhabi, and beyond.
+                        </p>
+                        <a href="#">Learn More</a>
+                        </div>
+                         <!-- Image Column -->
+                        <div class="col-lg-6 col-md-12 mb-4 mb-lg-0">
+                        <img src="/images/default-source/default-album/ind-cluster" alt="Life Sciences" class="img-fluid new-image-grid">
+                        </div>
+                </div>
+            </div>
+        </section>
+<style>
+    img.img-fluid.new-image-grid {
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+    object-fit: cover;
+}
+.new-text-grid p {
+    font-family: 'DIN Pro'!important;
+    font-size: 1.1rem!important;
+    font-weight: 500!important;
+    line-height: 1.7rem!important;
+    text-align: left!important;
+    color: #333!important;
+}
+.new-text-grid a{
+    color: #00999A!important;
+    background-color: transparent!important;
+    border: 1px solid #00999A!important;
+    padding: 10px 20px!important;
+    text-decoration: none!important;
+    border-radius: 5px!important;
+    margin-top: 1.5rem!important;
+    display: inline-block;
+}
+.new-text-grid a:hover{
+    color: white!important;
+    background-color: #00999A!important;
+    border: 1px solid #00999A!important;
+}
+.new-text-grid h2 {
+    margin-top: 0!important;
+    margin-bottom: 1rem!important;
+}
+@media (min-width: 100px) and (max-width: 991px) {
+.new-text-grid h2 {
+    font-size: 2.5rem!important;
+}}
+</style>
         </div>
     </main>
 
