create blod demo page

--- a/html/accordianDemo.html
+++ b/html/accordianDemo.html
@@ -218,7 +218,8 @@
                <div class="accordion" id="accordionExample">
                    <div class="accordion-item">
                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                            <div><h3>Life Sciences</h3>
+                            <div>
+                                <h3>Life Sciences</h3>
                         
                                 <p>PIONEERING HEALTH INNOVATIONS</p>
                             </div>
