--- a/html/accordianDemo.html
+++ b/html/accordianDemo.html
@@ -218,10 +218,13 @@
                <div class="accordion" id="accordionExample">
                    <div class="accordion-item">
                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                            <div>
-                                <h3>Life Sciences</h3>
-                        
-                                <p>PIONEERING HEALTH INNOVATIONS</p>
+                            <div class="accordion-content">
+                                <!-- Add an image for the icon -->
+                                <img src="assets/images/dynamic/business-enabler.svg" alt="Icon">
+                                <div>
+                                    <h3>Life Sciences</h3>
+                                    <p>PIONEERING HEALTH INNOVATIONS</p>
+                                </div>
                             </div>
                            </button>
                        <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
