--- a/html/cost-calculator.html
+++ b/html/cost-calculator.html
@@ -1233,7 +1233,7 @@
 
                 </div>
             </div>
-            <div class="thank-you-message pt-5">
+            <!-- <div class="thank-you-message pt-5">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-6">
@@ -1260,14 +1260,14 @@
                                         <p>10,000 AED </p>
                                     </div>
                                 </div>
-                                <!--<a href="javascript:void(0);" class="view-details d-flex gap-2 align-items-center">
+                                <a href="javascript:void(0);" class="view-details d-flex gap-2 align-items-center">
                                     View details
                                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18"
                                         fill="none">
                                         <path d="M5.25 10.5005L9 6.75049L12.75 10.5005H5.25Z" fill="#00999A" />
                                     </svg>
-                                </a>-->
-                                <div class="detailed-content mt-4 ">
+                                </a>
+                                <div class="detailed-content mt-4 height-0">
                                     <div class="d-flex justify-content-between">
                                         <p>Company Structure</p>
                                         <p>6,000 AED</p>
@@ -1309,7 +1309,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </section>
     </main>
 
